[tool.poetry]
name = "aws-permission-checker"
version = "0.1.0"
description = ""
authors = ["nostalgia <skfk0135@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.20.33"
pydantic = "^1.9.0"
black = "^21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
